app/(client)/styles/globals.css
@import "tailwindcss";
@plugin "daisyui";
@plugin "daisyui/theme" {
    name: "base";
    default: true;
    prefersdark: false;
    color-scheme: "light";
    --color-base-100: oklch(95% 0 0);
    --color-base-200: oklch(98% 0 0);
    --color-base-300: oklch(100% 0 0);
    --color-base-content: oklch(21% 0.006 285.885);
    --color-primary: oklch(0.3745 0.0614 255.29);
    --color-primary-content: oklch(93% 0.034 272.788);
    --color-secondary: oklch(65% 0.241 354.308);
    --color-secondary-content: oklch(94% 0.028 342.258);
    --color-accent: oklch(0.79 0 0)
    --color-accent-content: oklch(38% 0.063 188.416);
    --color-neutral: oklch(14% 0.005 285.823);
    --color-neutral-content: oklch(92% 0.004 286.32);
    --color-info: oklch(74% 0.16 232.661);
    --color-info-content: oklch(29% 0.066 243.157);
    --color-success: oklch(76% 0.177 163.223);
    --color-success-content: oklch(37% 0.077 168.94);
    --color-warning: oklch(0.6648 0.2256 36.2);
    --color-warning-content: oklch(41% 0.112 45.904);
    --color-error: oklch(71% 0.194 13.428);
    --color-error-content: oklch(27% 0.105 12.094);
    --radius-selector: 0.5rem;
    --radius-field: 0.25rem;
    --radius-box: 0.5rem;
    --size-selector: 0.25rem;
    --size-field: 0.25rem;
    --border: 1px;
    --depth: 1;
    --noise: 0;
}
:root {
  --font-merriweather: Merriweather, serif;
  --font-lato: Lato, sans-serif;
}

html{
  font-family: var(--font-lato);
}

.title{
  font-family: var(--font-merriweather);
}

.perspective {
  perspective: 1000px;
}
.preserve-3d {
  transform-style: preserve-3d;
}
.backface-hidden {
  backface-visibility: hidden;
}

